# ccding

./: .env.example  .gitignore  README.md  pyproject.toml  settings.hooks.example.json
ccding/: __init__.py  approval.py  cards.py  config.py  constants.py  desktop.py  feishu.py  focus.py  gate.py  log.py  platform_detect.py
ccding/hooks/: __init__.py  pretooluse.py  stop.py
ccding/scripts/: __init__.py  register_win_aumid.py  setup_feishu.py
doc/: SETUP.md  uv-python-1-webhook-zany-octopus.md
tests/: test_ccding.py
