[project]
name = "ccding"
version = "0.1.0"
description = "Claude Code 远程授权与完成提醒（飞书自定义应用 + 桌面弹窗，无常驻进程）"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lark-oapi>=1.6,<2",
    "psutil>=5.9",            # 焦点检测：进程祖先链
    # 仅 Windows：必须自带 sys_platform 标记，否则非 Windows 会去解析 windows-only 的 winrt-* 而失败
    "windows-toasts>=1.3 ; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccding"]
